# flow_matching_designs

./: .gitignore  Dockerfile  README.md  logging.yaml  pyproject.toml  requirements.txt
configs/: mnist_baseline.yaml  mnist_cfg_strong.yaml
data/: mnist.py
scripts/: export_checkpoint.py  sample_mnist.py  train_mnist.py
src/flow_matching_designs/data/: mnist.py
src/flow_matching_designs/math/: odes.py  paths.py  schedules.py  simulators.py
src/flow_matching_designs/models/: conditional_vector_field.py  registry.py  unet.py  unet_blocks.py
src/flow_matching_designs/sampling/: sampler.py
src/flow_matching_designs/scripts/: train_mnist.py
src/flow_matching_designs/training/: callbacks.py  losses.py  trainer.py
src/flow_matching_designs/utils/: seed.py
tests/: test_models.py  test_paths.py  test_sampling.py  test_training_step.py
